bpo-24596: Decref module in PyRun_SimpleFileExFlags() on SystemExit

PyErr_Print() will not return when the exception is a SystemExit, so
decref the __main__ module object in that case.